<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single"
        >
        <item android:id="@+id/home"

            android:title="@string/home"
            android:icon="@drawable/star"

            />
        <item android:id="@+id/notifications"

            android:title="@string/profile"
            android:icon="@drawable/star"

           />

        <item android:id="@+id/about"

            android:title="@string/about"
            android:icon="@drawable/star"
          />

        <item android:id="@+id/settings"

            android:title="@string/markettrends"
            android:icon="@drawable/star"

            />


        <item android:id="@+id/rate_app"

            android:title="@string/rate_app"
            android:icon="@drawable/star"
            />

      <!--  <item android:id="@+id/trending_offers"

            android:title="@string/trending_offers"
            android:icon="@drawable/star"
            />

        <item android:id="@+id/search_products"

            android:title="Search Products"
            android:icon="@drawable/star"
            />

        <item android:id="@+id/search_shopkeepers"

            android:title="Search ShopKeepers"
            android:icon="@drawable/star"
            />-->




    </group>
</menu>